--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+   background-color: gainsboro; 
 }
 .topnav {
     overflow: hidden;
@@ -21,4 +22,11 @@ body{
 .topnav a.active {
     background-color: grey;
     color: black;
+}
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    background-position: bottom center;
 }
